feat(settings): set equal width of inputs

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -5,6 +5,9 @@
     "description": {
         "message": ""
     },
+    "input_width_css": {
+        "message": "392px"
+    },
     "actions_section_text": {
         "message": "Actions"
     },
