feat: implement hotkeys

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -175,5 +175,146 @@
     },
     "hotkey_3": {
         "message": "Action 3"
+    },
+    "hotkey_4": {
+        "message": "Action 4"
+    },
+    "hotkey_5": {
+        "message": "Action 5"
+    },
+    "hotkey_6": {
+        "message": "Action 6"
+    },
+    "hotkey_7": {
+        "message": "Action 7"
+    },
+    "hotkey_8": {
+        "message": "Action 8"
+    },
+    "hotkey_9": {
+        "message": "Action 9"
+    },
+    "hotkey_10": {
+        "message": "Action 10"
+    },
+    "hotkey_11": {
+        "message": "Action 11"
+    },
+    "hotkey_12": {
+        "message": "Action 12"
+    },
+    "hotkey_13": {
+        "message": "Action 13"
+    },
+    "hotkey_14": {
+        "message": "Action 14"
+    },
+    "hotkey_15": {
+        "message": "Action 15"
+    },
+    "hotkey_16": {
+        "message": "Action 16"
+    },
+    "hotkey_17": {
+        "message": "Action 17"
+    },
+    "hotkey_18": {
+        "message": "Action 18"
+    },
+    "hotkey_19": {
+        "message": "Action 19"
+    },
+    "hotkey_20": {
+        "message": "Action 20"
+    },
+    "hotkey_21": {
+        "message": "Action 21"
+    },
+    "hotkey_22": {
+        "message": "Action 22"
+    },
+    "hotkey_23": {
+        "message": "Action 23"
+    },
+    "hotkey_24": {
+        "message": "Action 24"
+    },
+    "hotkey_25": {
+        "message": "Action 25"
+    },
+    "hotkey_26": {
+        "message": "Action 26"
+    },
+    "hotkey_27": {
+        "message": "Action 27"
+    },
+    "hotkey_28": {
+        "message": "Action 28"
+    },
+    "hotkey_29": {
+        "message": "Action 29"
+    },
+    "hotkey_30": {
+        "message": "Action 30"
+    },
+    "hotkey_31": {
+        "message": "Action 31"
+    },
+    "hotkey_32": {
+        "message": "Action 32"
+    },
+    "hotkey_33": {
+        "message": "Action 33"
+    },
+    "hotkey_34": {
+        "message": "Action 34"
+    },
+    "hotkey_35": {
+        "message": "Action 35"
+    },
+    "hotkey_36": {
+        "message": "Action 36"
+    },
+    "hotkey_37": {
+        "message": "Action 37"
+    },
+    "hotkey_38": {
+        "message": "Action 38"
+    },
+    "hotkey_39": {
+        "message": "Action 39"
+    },
+    "hotkey_40": {
+        "message": "Action 40"
+    },
+    "hotkey_41": {
+        "message": "Action 41"
+    },
+    "hotkey_42": {
+        "message": "Action 42"
+    },
+    "hotkey_43": {
+        "message": "Action 43"
+    },
+    "hotkey_44": {
+        "message": "Action 44"
+    },
+    "hotkey_45": {
+        "message": "Action 45"
+    },
+    "hotkey_46": {
+        "message": "Action 46"
+    },
+    "hotkey_47": {
+        "message": "Action 47"
+    },
+    "hotkey_48": {
+        "message": "Action 48"
+    },
+    "hotkey_49": {
+        "message": "Action 49"
+    },
+    "hotkey_50": {
+        "message": "Action 50"
     }
 }
