feat(messages): add help

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -149,6 +149,36 @@
     "any_hostname_except_current_option_text": {
         "message": "Any hostname except current"
     },
+    "actions_section_help_text": {
+        "message": "Here, you can define what actions appear in the context menus. Each action closes, pins or unpins tabs. The extension's icon context menu can have up to 6 actions. The \"on page\" context menu can have a lot more.\n\nTo create a new action first, select any action from the \"Actions\" dropdown. The settings of the chosen action will populate the inputs under the Create/Update/Delete action buttons. Edit these settings, then press the \"Create action\" button. The new action will appear in the \"Actions\" dropdown.\n\nTo update a current action, first, select it from the \"Actions\" dropdown. The settings of the chosen action will populate the inputs under the Create/Update/Delete action buttons. Edit these settings, then press the \"Update action\" button.\n\nTo delete an action, select it from the \"Actions\" dropdown and press the \"Delete action\" button."
+    },
+    "actions_help_text": {
+        "message": "All actions in the order they appear in the context menus. Each action closes, pins or unpins tabs."
+    },
+    "main_action_help_text": {
+        "message": "What action to run when you press the extension's icon. Action closes, pins or unpins tabs."
+    },
+    "action_btns_help_text": {
+        "message": "To create a new action first, select any action from the \"Actions\" dropdown. The settings of the chosen action will populate the inputs under the Create/Update/Delete action buttons. Edit these settings, then press the \"Create action\" button. The new action will appear in the \"Actions\" dropdown.\n\nTo update a current action first, select it from the \"Actions\" dropdown. The settings of the chosen action will populate the inputs under the Create/Update/Delete action buttons. Edit these settings, then press the \"Update action\" button.\n\nTo delete an action, select it from the \"Actions\" dropdown and press the \"Delete action\" button."
+    },
+    "action_name_help_text": {
+        "message": "A name of an action. as it appears in the context menus."
+    },
+    "action_position_help_text": {
+        "message": "Defines the order of an action in the context menus."
+    },
+    "window_hostname_comparison_help_text": {
+        "message": "If unchecked, the hostname in the active tab of the CURRENT window will be used as a basis for comparison instead.\n\nExample:\nYou have two windows. Each has four tabs, two facebook.com tabs and two reddit.com tabs. In the first window, facebook.com is the active tab. In the second, it's reddit.com. You're running close action with the \"All windows\", \"Other tabs\" and \"Current hostname\" settings.\n\nIf unchecked, the non-current facebook.com tabs will be closed in both windows.\n\nIf checked, the non-current facebook.com tab will be closed in the first window, but in the second window, it'll be the reddit.com tab."
+    },
+    "url_whitelist_help_text": {
+        "message": "Defines on which URLs or parts of URLs to perform an action.\n\nCancels out the effect of \"Affect tabs by hostname: Current hostname\".\n\nCancels out the effect of \"URL blacklist\"."
+    },
+    "url_blacklist_help_text": {
+        "message": "Defines on which URLs or parts of URLs to NOT perform an action.\n\nCancels out the effect of all \"Affect tabs by hostname\" options.\n\nThe effect is canceled out by \"URL whitelist\"."
+    },
+    "tab_counter_is_visible_help_text": {
+        "message": "Show the number of currently opened tabs on the extension's icon."
+    },
     "advanced_extension_reloader_chrome_link_text": {
         "message": "⚗️ Close Other Tabs Extended for Chrome"
     },
