--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -162,7 +162,7 @@
         "message": "To create a new action first, select any action from the \"Actions\" dropdown. The settings of the chosen action will populate the inputs under the Create/Update/Delete action buttons. Edit these settings, then press the \"Create action\" button. The new action will appear in the \"Actions\" dropdown.\n\nTo update a current action first, select it from the \"Actions\" dropdown. The settings of the chosen action will populate the inputs under the Create/Update/Delete action buttons. Edit these settings, then press the \"Update action\" button.\n\nTo delete an action, select it from the \"Actions\" dropdown and press the \"Delete action\" button."
     },
     "action_name_help_text": {
-        "message": "A name of an action. as it appears in the context menus."
+        "message": "A name of an action, as it appears in the context menus."
     },
     "action_position_help_text": {
         "message": "Defines the order of an action in the context menus."
