feat(messages): add Russian localization

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -2,14 +2,170 @@
     "description": {
         "message": ""
     },
+    "input_width_css": {
+        "message": "523px"
+    },
+    "close_other_tabs_default_action_name_text": {
+        "message": "Закрыть другие вкладки"
+    },
+    "close_tabs_to_the_right_default_action_name_text": {
+        "message": "Закрыть вкладки справа"
+    },
+    "close_tabs_to_the_left_default_action_name_text": {
+        "message": "Закрыть вкладки слева"
+    },
     "actions_section_text": {
         "message": "Действия"
     },
     "tab_counter_section_text": {
         "message": "Счетчик вкладок"
     },
+    "actions_label_text": {
+        "message": "Действия"
+    },
+    "main_action_label_text": {
+        "message": "Основное действие"
+    },
+    "action_name_label_text": {
+        "message": "Имя действия"
+    },
+    "action_position_label_text": {
+        "message": "Позиция действия"
+    },
+    "action_type_label_text": {
+        "message": "Тип действия"
+    },
+    "create_action_btn_text": {
+        "message": "Создать действие"
+    },
+    "update_action_btn_text": {
+        "message": "Обновить действие"
+    },
+    "delete_action_btn_text": {
+        "message": "Удалить действие"
+    },
+    "windows_to_affect_label_text": {
+        "message": "На какие окна воздействовать"
+    },
+    "tabs_to_affect_label_text": {
+        "message": "На какие вкладки воздействовать"
+    },
+    "pinned_tabs_label_text": {
+        "message": "Воздействовать на вкладки по состоянию закреплённости"
+    },
+    "grouped_tabs_label_text": {
+        "message": "Воздействовать на вкладки по состоянию группированности"
+    },
+    "hostnames_label_text": {
+        "message": "Воздействовать на вкладки по имени хоста"
+    },
+    "window_hostname_comparison_label_text": {
+        "message": "Использовать имя хоста активной вкладки каждого окна в качестве основы для сравнения"
+    },
+    "url_whitelist_label_text": {
+        "message": "Белый список URL-адресов"
+    },
+    "url_blacklist_label_text": {
+        "message": "Чёрный список URL-адресов"
+    },
+    "open_new_tab_after_action_label_text": {
+        "message": "Открывать новую вкладку после выполнения действия"
+    },
+    "urls_after_action_label_text": {
+        "message": "URL-адреса, которые будут открыты после выполнен. действия"
+    },
     "tab_counter_is_visible_label_text": {
         "message": "Показывать счетчик вкладок"
+    },
+    "close_option_text": {
+        "message": "Закрыть"
+    },
+    "pin_option_text": {
+        "message": "Закрепить"
+    },
+    "unpin_option_text": {
+        "message": "Открепить"
+    },
+    "current_window_option_text": {
+        "message": "Текущее окно"
+    },
+    "all_windows_option_text": {
+        "message": "Все окна"
+    },
+    "other_windows_option_text": {
+        "message": "Другие окна"
+    },
+    "current_tab_option_text": {
+        "message": "Текущая вкладка"
+    },
+    "all_tabs_option_text": {
+        "message": "Все вкладки"
+    },
+    "other_tabs_option_text": {
+        "message": "Другие вкладки"
+    },
+    "tabs_to_right_option_text": {
+        "message": "Вкладки справа"
+    },
+    "tabs_to_left_option_text": {
+        "message": "Вкладки слева"
+    },
+    "pinned_and_unpinned_option_text": {
+        "message": "Закреплённые + откреплённые"
+    },
+    "pinned_option_text": {
+        "message": "Закреплённые"
+    },
+    "unpinned_option_text": {
+        "message": "Откреплённые"
+    },
+    "grouped_and_ungrouped_option_text": {
+        "message": "Сгруппированные + несгруппированные"
+    },
+    "grouped_option_text": {
+        "message": "Сгруппированные"
+    },
+    "ungrouped_option_text": {
+        "message": "Несгруппированные"
+    },
+    "current_hostname_option_text": {
+        "message": "Текущее имя хоста"
+    },
+    "any_hostname_option_text": {
+        "message": "Любое имя хоста"
+    },
+    "any_hostname_except_current_option_text": {
+        "message": "Любое имя хоста, кроме текущего"
+    },
+    "actions_section_help_text": {
+        "message": "Здесь вы можете настроить, какие действия будут отображаться в контекстных меню. Каждое действие закрывает, закрепляет или открепляет вкладки. В контекстном меню иконки расширения может быть до 6 действий. В \"страничном\" контекстном меню их может быть гораздо больше.\n\nЧтобы создать новое действие, сначала выберите любое действие из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками Создать/Обновить/Удалить действие. Отредактируйте эти параметры, и затем нажмите кнопку \"Создать действие\". Новое действие появится в выпадающем меню \"Действия\".\n\nЧтобы обновить действие, сначала выберите его из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками Создать/Обновить/Удалить действие. Отредактируйте эти параметры, и затем нажмите кнопку \"Обновить действие\".\n\nЧтобы удалить действие, выберите его из выпадающего списка \"Действия\" и нажмите кнопку \"Удалить действие\"."
+    },
+    "actions_help_text": {
+        "message": "Все действия в том порядке, в котором они появляются в контекстных меню. Каждое действие закрывает, закрепляет или открепляет вкладки."
+    },
+    "main_action_help_text": {
+        "message": "Какое действие выполнять при нажатии на иконку расширения. Действие закрывает, закрепляет или открепляет вкладки."
+    },
+    "action_btns_help_text": {
+        "message": "Чтобы создать новое действие, сначала выберите любое действие из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками Создать/Обновить/Удалить действие. Отредактируйте эти параметры, и затем нажмите кнопку \"Создать действие\". Новое действие появится в выпадающем меню \"Действия\".\n\nЧтобы обновить действие, сначала выберите его из выпадающего списка \"Действия\". Настройки выбранного действия заполнят поля под кнопками Создать/Обновить/Удалить действие. Отредактируйте эти параметры, и затем нажмите кнопку \"Обновить действие\".\n\nЧтобы удалить действие, выберите его из выпадающего списка \"Действия\" и нажмите кнопку \"Удалить действие\"."
+    },
+    "action_name_help_text": {
+        "message": "Имя действия, как оно отображается в контекстных меню."
+    },
+    "action_position_help_text": {
+        "message": "Определяет порядок действий в контекстных меню."
+    },
+    "window_hostname_comparison_help_text": {
+        "message": "Если флажок снят, в качестве основы для сравнения будет использоваться имя хоста АКТИВНОЙ вкладки текущего окна.\n\nПример:\nУ вас открыто два окна. В каждом из них открыто четыре вкладки, две вкладки facebook.com и две вкладки reddit.com. В первом окне активной вкладкой является facebook.com. Во втором - reddit.com. Вы выполняете действие закрытия вкладок с параметрами \"Все окна\", \"Другие вкладки\" и \"Текущее имя хоста\".\n\nЕсли флажок не установлен, неактивные вкладки facebook.com будут закрыты в обоих окнах.\n\nЕсли флажок установлен, неактивная вкладка facebook.com будет закрыта в первом окне, но во втором окне будет закрыта вкладка reddit.com."
+    },
+    "url_whitelist_help_text": {
+        "message": "Определяет, над какими URL-адресами или их частями выполнять действие.\n\nОтменяет эффект \"Воздействовать на вкладки по имени хоста: текущее имя хоста\".\n\nОтменяет эффект из поля \"Чёрный список URL-адресов\"."
+    },
+    "url_blacklist_help_text": {
+        "message": "Определяет, над какими URL-адресами или их частями НЕ выполнять действие.\n\nОтменяет эффект всех опций из выпадающего меню \"Воздействовать на вкладки по имени хоста\".\n\nЭффект отменяется полем \"Чёрный список URL-адресов\"."
+    },
+    "tab_counter_is_visible_help_text": {
+        "message": "Показывать количество открытых в данный момент вкладок на иконке расширения."
     },
     "advanced_extension_reloader_chrome_link_text": {
         "message": "⚗️ Close Other Tabs Extended для Chrome"
@@ -28,5 +184,146 @@
     },
     "hotkey_3": {
         "message": "Действие 3"
+    },
+    "hotkey_4": {
+        "message": "Действие 4"
+    },
+    "hotkey_5": {
+        "message": "Действие 5"
+    },
+    "hotkey_6": {
+        "message": "Действие 6"
+    },
+    "hotkey_7": {
+        "message": "Действие 7"
+    },
+    "hotkey_8": {
+        "message": "Действие 8"
+    },
+    "hotkey_9": {
+        "message": "Действие 9"
+    },
+    "hotkey_10": {
+        "message": "Действие 10"
+    },
+    "hotkey_11": {
+        "message": "Действие 11"
+    },
+    "hotkey_12": {
+        "message": "Действие 12"
+    },
+    "hotkey_13": {
+        "message": "Действие 13"
+    },
+    "hotkey_14": {
+        "message": "Действие 14"
+    },
+    "hotkey_15": {
+        "message": "Действие 15"
+    },
+    "hotkey_16": {
+        "message": "Действие 16"
+    },
+    "hotkey_17": {
+        "message": "Действие 17"
+    },
+    "hotkey_18": {
+        "message": "Действие 18"
+    },
+    "hotkey_19": {
+        "message": "Действие 19"
+    },
+    "hotkey_20": {
+        "message": "Действие 20"
+    },
+    "hotkey_21": {
+        "message": "Действие 21"
+    },
+    "hotkey_22": {
+        "message": "Действие 22"
+    },
+    "hotkey_23": {
+        "message": "Действие 23"
+    },
+    "hotkey_24": {
+        "message": "Действие 24"
+    },
+    "hotkey_25": {
+        "message": "Действие 25"
+    },
+    "hotkey_26": {
+        "message": "Действие 26"
+    },
+    "hotkey_27": {
+        "message": "Действие 27"
+    },
+    "hotkey_28": {
+        "message": "Действие 28"
+    },
+    "hotkey_29": {
+        "message": "Действие 29"
+    },
+    "hotkey_30": {
+        "message": "Действие 30"
+    },
+    "hotkey_31": {
+        "message": "Действие 31"
+    },
+    "hotkey_32": {
+        "message": "Действие 32"
+    },
+    "hotkey_33": {
+        "message": "Действие 33"
+    },
+    "hotkey_34": {
+        "message": "Действие 34"
+    },
+    "hotkey_35": {
+        "message": "Действие 35"
+    },
+    "hotkey_36": {
+        "message": "Действие 36"
+    },
+    "hotkey_37": {
+        "message": "Действие 37"
+    },
+    "hotkey_38": {
+        "message": "Действие 38"
+    },
+    "hotkey_39": {
+        "message": "Действие 39"
+    },
+    "hotkey_40": {
+        "message": "Действие 40"
+    },
+    "hotkey_41": {
+        "message": "Действие 41"
+    },
+    "hotkey_42": {
+        "message": "Действие 42"
+    },
+    "hotkey_43": {
+        "message": "Действие 43"
+    },
+    "hotkey_44": {
+        "message": "Действие 44"
+    },
+    "hotkey_45": {
+        "message": "Действие 45"
+    },
+    "hotkey_46": {
+        "message": "Действие 46"
+    },
+    "hotkey_47": {
+        "message": "Действие 47"
+    },
+    "hotkey_48": {
+        "message": "Действие 48"
+    },
+    "hotkey_49": {
+        "message": "Действие 49"
+    },
+    "hotkey_50": {
+        "message": "Действие 50"
     }
 }
