--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,6 +1,6 @@
 {
     "description": {
-        "message": ""
+        "message": "Закрывайте/закрепляйте/открепляйте несколько вкладок сразу, фильтруя их по окну, состоянию закреплённости/группированности или имени хоста."
     },
     "input_width_css": {
         "message": "523px"
